--- a/description/reference.bib
+++ b/description/reference.bib
@@ -12,22 +12,15 @@
   note = {Available at \url{https://github.com/lteu/oasc}}
 }
 
-@inproceedings{DBLP:conf/cilc/AmadiniBGLM15,
-  author    = {Roberto Amadini and
-               Fabio Biselli and
-               Maurizio Gabbrielli and
-               Tong Liu and
-               Jacopo Mauro},
-  title     = {{SUNNY} for algorithm selection: a preliminary study},
-  booktitle = {Proceedings of the 30th Italian Conference on Computational Logic,
-               Genova, Italy, July 1-3, 2015.},
-  pages     = {202--206},
+
+@proceedings{DBLP:conf/ictai/2015,
+  title     = {27th {IEEE} International Conference on Tools with Artificial Intelligence,
+               {ICTAI} 2015, Vietri sul Mare, Italy, November 9-11, 2015},
+  publisher = {{IEEE} Computer Society},
   year      = {2015},
-  crossref  = {DBLP:conf/cilc/2015},
-  url       = {http://ceur-ws.org/Vol-1459/paper3.pdf},
-  timestamp = {Mon, 30 May 2016 16:28:37 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/cilc/AmadiniBGLM15},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+  url       = {http://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=7372093},
+  isbn      = {978-1-5090-0163-7},
+  timestamp = {Wed, 04 May 2016 12:16:59 +0200}
 }
 
 @ARTICLE{Kohavi97wrappersfor,
@@ -45,15 +38,9 @@
                Rolf{-}David Bergdoll and
                Frank Hutter},
   title     = {An Empirical Study of Per-instance Algorithm Scheduling},
-  booktitle = {Learning and Intelligent Optimization - 10th International Conference,
-               {LION} 10, Ischia, Italy, May 29 - June 1, 2016, Revised Selected
-               Papers},
-  pages     = {253--259},
+  booktitle = {LION 10, Ischia, Italy, May 29 - June 1, 2016},
   year      = {2016},
   crossref  = {DBLP:conf/lion/2016},
   url       = {https://doi.org/10.1007/978-3-319-50349-3_20},
-  doi       = {10.1007/978-3-319-50349-3_20},
-  timestamp = {Fri, 26 May 2017 01:00:00 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/lion/LindauerBH16},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+  doi       = {10.1007/978-3-319-50349-3_20}
 }
