--- a/description/reference.bib
+++ b/description/reference.bib
@@ -1,26 +1,31 @@
 @misc{sunnyas,
-  title={SUNNY AS},
-  author={Amadini},
+  title={{SUNNY-AS}},
+  author={Roberto Amadini and Jacopo Mauro},
   year={2015},
   note = {Available at \url{https://github.com/CP-Unibo/sunny-as}}
 }
 
 @misc{sunnyoasc,
-  title={SUNNY-OASC},
-  author={Liu},
+  title={{SUNNY-OASC}},
+  author={Tong Liu},
   year={2017},
   note = {Available at \url{https://github.com/lteu/oasc}}
 }
 
 
-@proceedings{DBLP:conf/ictai/2015,
-  title     = {27th {IEEE} International Conference on Tools with Artificial Intelligence,
-               {ICTAI} 2015, Vietri sul Mare, Italy, November 9-11, 2015},
-  publisher = {{IEEE} Computer Society},
+@inproceedings{ictai_paper,
+  author    = {Roberto Amadini and
+               Fabio Biselli and
+               Maurizio Gabbrielli and
+               Tong Liu and
+               Jacopo Mauro},
+  title     = {Feature Selection for {SUNNY:} {A} Study on the Algorithm 
+Selection
+               Library},
+  booktitle = {ICTAI},
+  pages     = {25--32},
   year      = {2015},
-  url       = {http://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=7372093},
-  isbn      = {978-1-5090-0163-7},
-  timestamp = {Wed, 04 May 2016 12:16:59 +0200}
+  publisher = {{IEEE} Computer Society}
 }
 
 @ARTICLE{Kohavi97wrappersfor,
@@ -37,10 +42,11 @@
   author    = {Marius Lindauer and
                Rolf{-}David Bergdoll and
                Frank Hutter},
-  title     = {An Empirical Study of Per-instance Algorithm Scheduling},
-  booktitle = {LION 10, Ischia, Italy, May 29 - June 1, 2016},
+  title     = {{An Empirical Study of Per-instance Algorithm Scheduling}},
+  booktitle = {LION},
   year      = {2016},
-  crossref  = {DBLP:conf/lion/2016},
-  url       = {https://doi.org/10.1007/978-3-319-50349-3_20},
-  doi       = {10.1007/978-3-319-50349-3_20}
+  pages     = {253--259},
+  series    = {LNCS},
+  volume    = {10079},
+  publisher = {Springer}
 }
