--- a/description/reference.bib
+++ b/description/reference.bib
@@ -12,6 +12,22 @@
   note = {Available at \url{https://github.com/lteu/oasc}}
 }
 
+@article{bischl2016aslib,
+  title={Aslib: A benchmark library for algorithm selection},
+  author={Bischl, Bernd and Kerschke, Pascal and Kotthoff, Lars and Lindauer, Marius and Malitsky, Yuri and Fr{\'e}chette, Alexandre and Hoos, Holger and Hutter, Frank and Leyton-Brown, Kevin and Tierney, Kevin and others},
+  journal={Artificial Intelligence},
+  volume={237},
+  pages={41--58},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{kotthoff2015icon,
+  title={ICON challenge on algorithm selection},
+  author={Kotthoff, Lars},
+  journal={arXiv preprint arXiv:1511.04326},
+  year={2015}
+}
 
 @inproceedings{ictai_paper,
   author    = {Roberto Amadini and
