--- a/description/main.tex
+++ b/description/main.tex
@@ -44,21 +44,26 @@
 \title[SUNNY-OASC]{SUNNY with Algorithm Configuration}
 
 
+
+
  % Two authors with the same address
-  \author{\Name{Tong Liu} \Email{t.liu@unibo.it}\\
-   \Name{Roberto Amadini} \Email{roberto.amadini@unimelb.edu.au}\\
-   \Name{Jacopo Mauro} \Email{mauro.jacopo@gmail.com}\\
-    }
+  % \author{\Name{Tong Liu} \Email{t.liu@unibo.it}\\
+  %  \Name{Roberto Amadini} \Email{roberto.amadini@unimelb.edu.au}\\
+  %  \Name{Jacopo Mauro} \Email{mauro.jacopo@gmail.com}\\
+  %   }
 
 
 
  % Authors with different addresses:
- % \author{\Name{Author Name1} \Email{abc@sample.com}\\
- % \addr Address 1
- % \AND
- % \Name{Author Name2} \Email{xyz@sample.com}\\
- % \addr Address 2
- %}
+ \author{\Name{Tong Liu} \Email{t.liu@unibo.it}\\
+ \addr University of Bologna, Italy 
+ \AND
+ \Name{Roberto Amadini} \Email{roberto.amadini@unimelb.edu.au}\\
+ \addr University of Melbourne, Australia
+ \AND
+ \Name{Jacopo Mauro} \Email{mauro.jacopo@gmail.com}\\
+ \addr University of Oslo, Norway
+ }
 
 
  %\editors{Editor One and Editor Two}% for multiple editors
@@ -67,21 +72,46 @@
 
 \maketitle
 
+\begin{abstract}%   <- trailing '%' for backward compatibility of .sty file
+The SUNNY algorithm is a kNN portfolio technique originally tailored for CSP problems.
+It achieved excellent results consecutively in the Minizin Challenge in the last three years. 
+In 2015, SUNNY for the first time forked a branch for ASLIB \footnote{See \cite{bischl2016aslib}} problems, however, due to
+the lack of insufficient training process, it performed poorly in the ICON-Challenge 2015 \footnote{See \cite{kotthoff2015icon}}.
+After several efforts of investigation on algorithm configuration and on ASLIB problem features, we proposed
+an integrated training process for SUNNY and bring SUNNY into the OASC challenge. The final results were
+encouraging and competitive.
+
+% \TODO{abstract content improvements} 
+\end{abstract}
 
 
 \section{Description}
 
-SUNNY-OASC is an per instance algorithm scheduling strategy based on K-NN 
-technique.
-SUNNY-OASC is an extension of 
-the SUNNY-AS tool (see \cite{ictai_paper,sunnyas}) with some 
-ideas borrowed from the work of  
-\cite{DBLP:conf/lion/LindauerBH16}. 
+\subsection{SUNNY}
+
+SUNNY is an per instance algorithm scheduling strategy based on kNN 
+. Briefly speaking, for each test instance, SUNNY selects
+$k$ training instances which are similar to the test instance
+in terms of Euclidean Distance (on instance features). Based on the selected instances,
+SUNNY generates a schedule of solvers that cover the $k$ instances as much as possible. 
+Then, a time slot, which is propotional to the fraction of solved instances, is
+assigned to each solver. Finally, the proposed solvers get ordered
+according to the number of $k$ instances solved. 
+In the tool SUNNY-AS (see \cite{ictai_paper,sunnyas}),
+we selected a subset of solvers, which solve 
+the $k$ instances as least time as possible.
+  
+
+SUNNY-OASC is an extension of the
+original SUNNY algorithm with the idea of configuring neighbourhood size $k$ 
+(borrowed from the work of  \cite{DBLP:conf/lion/LindauerBH16}) and
+wrapper-based feature selection.
+
 % and \cite{Kohavi97wrappersfor}.
 
 % In particular, as \cite{DBLP:conf/lion/LindauerBH16} show, the improvement 
 % in performance w.r.t. SUNNY-AS is mainly due to  has demonstrated that how a 
-% training phase, by studying the value $K$ and the number of solvers, can boost 
+% training phase, by studying the value $k$ and the number of solvers, can boost 
 % SUNNY performance. However, we believe that the number of solvers is a trivial 
 % option to configure, because, in our original version, SUNNY employs less 
 % solvers as reported. 
@@ -94,46 +124,50 @@ SUNNY-OASC has two execution modalities: \texttt{autok} and
 \begin{itemize}
   \item The \texttt{autok} is a variant of T-SUNNY as defined by 
 \cite{DBLP:conf/lion/LindauerBH16} where SUNNY-AS has been improved by training 
-also on the size of the value of the neighborhood 
-$K$.\footnote{\texttt{autok} is slightly different than T-SUNNY since the 
+also on the size of the neighborhood 
+$k$.\footnote{\texttt{autok} is slightly different than T-SUNNY since the 
 reimplementation of T-SUNNY used a different algorithm to select the 
 solvers to use. To chose the solvers we used the original SUNNY-AS 
 algorithm.}
-  \item The \texttt{fkvar} instead trains for the neighborhood value $K$ and 
+  \item The \texttt{fkvar} instead trains for the neighborhood value $k$ and 
 the subset of features to consider by using a wrapper method 
 \cite{Kohavi97wrappersfor}. SUNNY is used as the evaluator and a 
 greedy forward selection is adopted to select the subset of features for 
 computing the neighborhood.
 % 
 The selection cycle is defined as follow: 
-the unselected feature set is considered and we pick one feature at time 
+the unselected feature set is considered and we pick one feature at time, 
 adding it to the selected features set (initially empty) to form a test 
-feature set. By tuning also the value k, SUNNY calculates the best par10 score 
+feature set. By also tuning the value k, SUNNY calculates the best PAR10 score 
 that it can achieve with the test feature set. Based on the outcome, a new 
 feature is added until the performance decrease or we have performed a given 
 number of evaluations. In the end, \texttt{fkvar} 
-produces a combination of features and a value $K$ for which SUNNY performs the 
+produces a combination of features and a value $k$ for which SUNNY performs the 
 best on training data.
+
+When the selection cycle ends, we run a backup with the \texttt{autok} modality. This is helpful
+for those scenarios where all features are more relevant than the selected features
+for SUNNY performance.
 \end{itemize}
  
 
 \subsection{Representative instances}
-For performance reasons, SUNNY-OASC is not used on all the instances available 
+For training performance reasons \footnote{e.g. on a PC with Intel Core i5(3.30 GHz) and 8 GB RAM, running Ubuntu, training one fold (10 folds in total) of scenario PROTUS($4,000$ instances) would take 35 hours with \texttt{fkvar} approach}, SUNNY-OASC is not used on all the instances available 
 but only on some selected ones.
 The representative instances used for the training are selected as follow: i) 
-SUNNY-OASC first associates each instance to a solver that solves it in the 
-least time, ii) for each solver instances are ordered from hard to easy in terms 
+SUNNY-OASC first associates each training instance to a solver that solves it in the 
+least time, according to the ground data, ii) for each solver instances are ordered from hard to easy in terms 
 of runtime, iii) for each solver one instance at the time is picked until a 
 global limit on the number of representative instances is reached.
 
 \subsection{Parameters for the Challenge}
-The experiments performed by \cite{ictai_paper} suggest that a handful subset 
-of features (e.g., 5 or less) is often enough for SUNNY to obtain a 
+In literature \cite{bischl2016aslib,ictai_paper}, it is suggested that a handful subset 
+of features (e.g., 5 or less) is often enough for SUNNY to obtain  
 competitive performance. For this reason, in \texttt{fkvar} we fixed 
-5 as the amount of feature to select. In order to guarantee an acceptable 
+5 as the number of feature to select. In order to guarantee an acceptable 
 execution runtime, for the \texttt{fkvar} approach, we have chosen to 
 consider only $1500$ and not more instances to be included in the 
-representative instance set. We also fixed the interval of $K$ as [3,30]. 
+representative instance set. We also fixed the interval of $k$ as [3,30]. 
 % \footnote{Note that with scenarios with around 5.000 instances, the training 
 % may take a couple of days for training. Besides, the interval [3,30] would 
 % cover most of the useful K values. }.
@@ -151,15 +185,15 @@ representative instance set. We also fixed the interval of $K$ as [3,30].
 % questo approccio aiuta sunny-as in qualche modo di evitare di staccare in local optima}
 
 When \texttt{fkvar} is executed, we also run 
-\texttt{autok} with $K \in [3,80]$ as a backup. If SUNNY runs better with the 
+\texttt{autok} with $k \in [3,80]$ as a backup. If SUNNY runs better with the 
 entire feature set, we then use the result produced by \texttt{autok}.
 
-For the \texttt{autok} version submitted, differently to the one used as a 
+For the \texttt{autok} version submitted, different to the one used as a 
 backup, when running SUNNY-OASC in the \texttt{fkvar} modality, we consider the 
 full training set as effective training data (i.e., more than 1500 
 instances are used to train if available). 
 
-\section{Setup Instruction}
+\section{Setup Instructions}
 
 The source code of SUNNY-OACS is available at \cite{sunnyoasc} and requires 
 Python v2. There are five folders: `data' and `results' contain oasc-challenge 
@@ -171,13 +205,13 @@ automatically call `oasc' for the different execution modalities.
 The program runs training and testing in sequence. Let us take \texttt{autok} 
 approach as execution example. To run it, in the folder `main' the 
 command ``sh make\_oasc\_tasks.sh $>$ tasks.txt'' must be used to create 
-the tasks. Then the train can be done by running ``sh oasc\_train.sh 
+the tasks. Then the training can be done by running ``sh oasc\_train.sh 
 run\_autok tasks.txt''. After training, the test is run by ``sh 
 make\_oasc\_tasks.sh $>$ tasks.txt'' and later by ``sh oasc\_test.sh autok 
 tasks.txt''.
 
 To run \texttt{fkvar} it is sufficient to replace 
-literally \texttt{autok} by \texttt{fkvar} in the previous commands. 
+ \texttt{autok} by \texttt{fkvar} in the previous commands. 
 
 \bibliography{reference}
 
