--- a/description/reference.bib
+++ b/description/reference.bib
@@ -1,3 +1,17 @@
+@inproceedings{sunnycp2,
+  author    = {Roberto Amadini and
+               Maurizio Gabbrielli and
+               Jacopo Mauro},
+  title     = {{A Multicore Tool for Constraint Solving}},
+  booktitle = {Proceedings of the Twenty-Fourth International Joint Conference 
+on
+               Artificial Intelligence, {IJCAI} 2015, Buenos Aires, Argentina, 
+July
+               25-31, 2015},
+  pages     = {232--238},
+  year      = {2015}
+}
+
 @misc{sunnyas,
   title={{SUNNY-AS}},
   author={Roberto Amadini and Jacopo Mauro},
